--- a/src/app/page/add-customer-page/add-customer-page.component.html
+++ b/src/app/page/add-customer-page/add-customer-page.component.html
@@ -1,1 +1,50 @@
-<p>add-customer-page works!</p>
+<body class="background">
+    <div class="add-book-container">
+      <h2>Add a New Customer</h2>
+      <form #bookForm="ngForm">
+        <div class="form-group">
+          <label for="title">Name</label>
+          <input
+            type="text"
+            id="bookName"
+            name="bookName"
+            [(ngModel)]="customer.customerName"
+            required
+            placeholder="Enter name"
+          />
+        </div>
+  
+        <div class="form-group">
+          <label for="category">City</label>
+          <input
+            type="text"
+            id="bookCategory"
+            name="bookCategory"
+            [(ngModel)]="customer.city"
+            required
+            placeholder="Enter city"
+          />
+        </div>
+  
+        <div class="form-group">
+          <label for="author">Contact</label>
+          <input
+            type="text"
+            id="bookAuthor"
+            name="bookAuthor"
+            [(ngModel)]="customer.contact"
+            required
+            placeholder="Enter contact number"
+          />
+        </div>
+  
+        <button
+          class="button2"
+          [disabled]="bookForm.invalid"
+          (click)="onSubmit()"
+        >
+          Add customer
+        </button>
+      </form>
+    </div>
+  </body>
