--- a/src/app/page/add-item-page/add-item-page.component.html
+++ b/src/app/page/add-item-page/add-item-page.component.html
@@ -1,1 +1,62 @@
-<p>add-item-page works!</p>
+<body class="background">
+    <div class="add-book-container">
+      <h2>Add a New Item</h2>
+      <form #bookForm="ngForm">
+        <div class="form-group">
+          <label for="title">Item Name</label>
+          <input
+            type="text"
+            id="bookName"
+            name="bookName"
+            [(ngModel)]="item.itemName"
+            required
+            placeholder="Enter item name"
+          />
+        </div>
+  
+        <div class="form-group">
+          <label for="category">Availability</label>
+          <input
+            type="text"
+            id="bookCategory"
+            name="bookCategory"
+            [(ngModel)]="item.availability"
+            required
+            placeholder="Enter availability"
+          />
+        </div>
+  
+        <div class="form-group">
+          <label for="author">Fine per day</label>
+          <input
+            type="text"
+            id="bookAuthor"
+            name="bookAuthor"
+            [(ngModel)]="item.finePerDay"
+            required
+            placeholder="Enter fine per day"
+          />
+        </div>
+
+        <div class="form-group">
+            <label for="author">Rental per day</label>
+            <input
+              type="text"
+              id="bookAuthor"
+              name="bookAuthor"
+              [(ngModel)]="item.rentalPerDay"
+              required
+              placeholder="Enter rental per day"
+            />
+          </div>
+  
+        <button
+          class="button2"
+          [disabled]="bookForm.invalid"
+          (click)="onSubmit()"
+        >
+          Add Item
+        </button>
+      </form>
+    </div>
+  </body>
