--- a/src/app/page/manage-customer-page/manage-customer-page.component.html
+++ b/src/app/page/manage-customer-page/manage-customer-page.component.html
@@ -1,6 +1,6 @@
 <body class="background">
     <div class="manage-book-container">
-      <h2>Manage Books</h2>
+      <h2>Manage Customers</h2>
       
       <div class="search">
         <input
@@ -8,7 +8,7 @@
         type="text"
         [(ngModel)]="searchQuery"
         (keyup.enter)="searchBook(searchQuery)" />
-          <button type="submit" (click)="searchBook(searchQuery)">Go</button>
+          <button type="submit" (click)="searchBook(searchQuery)">Search</button>
         </div>
       
   
