--- a/src/app/common/main-page/main-page.component.html
+++ b/src/app/common/main-page/main-page.component.html
@@ -7,5 +7,6 @@
         <button class="btn btn-4" routerLink="manage-item">manage item</button>
         <button class="btn btn-5" routerLink="add-rental">add rental</button>
         <button class="btn btn-6" routerLink="manage-rental">manage rental</button>
+        <button class="btn btn-6" routerLink="bill-page">bill</button>
     </div>
 </body>
