--- a/src/app/page/add-rental-page/add-rental-page.component.css
+++ b/src/app/page/add-rental-page/add-rental-page.component.css
@@ -8,7 +8,7 @@
     z-index: -1;
   }
   
-  .add-book-container {
+  .add-rental-container {
     max-width: 500px;
     margin: 0 auto;
     padding: 2rem;
