--- a/src/app/page/manage-item-page/manage-item-page.component.css
+++ b/src/app/page/manage-item-page/manage-item-page.component.css
@@ -8,7 +8,7 @@
     z-index: -1; 
   }
   
-  .manage-book-container {
+  .manage-item-container {
       max-width: 800px;
       margin: 0 auto;   
       padding: 2rem;
