--- a/src/app/page/manage-rental-page/manage-rental-page.component.css
+++ b/src/app/page/manage-rental-page/manage-rental-page.component.css
@@ -8,7 +8,7 @@
     z-index: -1; 
   }
   
-  .manage-book-container {
+  .manage-rental-container {
       max-width: 1200px;
       margin: 0 auto;   
       padding: 2rem;
